--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.2",
-    "@angular/cdk": "^6.0.2",
+    "@angular/cdk": "^6.4.7",
     "@angular/common": "^6.0.2",
     "@angular/compiler": "^6.0.2",
     "@angular/core": "^6.0.2",
+    "@angular/flex-layout": "^7.0.0-beta.23",
     "@angular/forms": "^6.0.2",
     "@angular/http": "^6.0.2",
     "@angular/material": "^6.0.2",
